--- a/CMPM170-proto1/Assembly-CSharp.csproj
+++ b/CMPM170-proto1/Assembly-CSharp.csproj
@@ -62,7 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\dadMovement.cs" />
+    <Compile Include="Assets\genericMovement.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>D:/Aaron/Portfolio/Unity/CMPM170-proto1/CMPM170-proto1/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
